Fixed header for mobile and party section spacing

--- a/wp-content/themes/Q35/css/app.css
+++ b/wp-content/themes/Q35/css/app.css
@@ -715,15 +715,28 @@ h1, h2, h3, h4, h5, h6 { text-transform: uppercase; }
 /* Header */
 header { color: #929292; background: #f1f1f2; padding: 0; height: 666px; margin-top: 86px; padding: 18rem 0; }
 
+@media screen and (max-width: 485px) { header { padding: 8rem 0; height: auto; } }
+
 .thirty-five { padding: 0; margin: 0 2rem 0 0; max-width: 450px; height: 300px; width: 100%; position: relative; overflow: hidden; }
 
-.thirty-five .layer { position: absolute; width: 100%; height: 100%; padding: 0; z-index: 10; top: 0px; }
+@media screen and (max-width: 485px) { .thirty-five { margin: 0; height: auto; overflow: none; } }
+
+.thirty-five .layer { position: absolute; width: 100%; height: 100%; padding: 0; z-index: 10; top: 0px; list-style: none; }
+
+@media screen and (max-width: 485px) { .thirty-five .layer { position: relative; background: transparent url(../img/35-years-background-vector-2.svg) repeat top right; background-size: cover; margin: 0 10px; width: auto; }
+  .thirty-five .layer img { width: auto; height: 100%; } }
 
 .thirty-five #layer1 { background: transparent url(../img/35-years-background-vector-2.svg) repeat top right fixed; background-size: 450px 700px; height: 296px; z-index: 1; }
+
+@media screen and (max-width: 485px) { .thirty-five #layer1 { height: 100%; display: inline-block; } }
+
+@media screen and (max-width: 380px) { .thirty-five #layer1 { display: none; } }
 
 .banner-text { margin: 0; padding: 0; display: inline-block; font-size: 4.8rem; min-width: 400px; }
 
 @media screen and (max-width: 885px) { .banner-text { min-width: 465px; } }
+
+@media screen and (max-width: 485px) { .banner-text { min-width: 100%; padding: 0 10px; font-size: 3.5rem; } }
 
 /*Vertical Sliding*/
 .slidingVertical { display: inline; text-indent: 8px; }
@@ -972,6 +985,8 @@ section p { font-family: "adelle", serif; font-style: italic; font-size: 2.3rem;
 @media screen and (max-width: 550px) { .alum .person { -webkit-flex: 1 1 100%; -ms-flex: 1 1 100%; flex: 1 1 100%; } }
 
 #party { position: relative; padding: 0; line-height: 0; font-size: 0; }
+
+@media screen and (max-width: 768px) { #party { max-height: 600px; overflow: hidden; } }
 
 #party #confetti { position: relative; width: 100%; height: 100%; top: 0; left: 0; z-index: 1; }
 
