--- a/wp-content/themes/Q35/scss/_q.scss
+++ b/wp-content/themes/Q35/scss/_q.scss
@@ -41,6 +41,11 @@ header {
     height: 666px;
     margin-top: 86px;
     padding: 18rem 0;
+
+    @include responsive("485px") {
+        padding: 8rem 0;
+        height: auto;
+    }
 }
 
 .thirty-five {
@@ -52,6 +57,13 @@ header {
     position: relative;
     overflow: hidden;
 
+    @include responsive("485px") {
+        margin: 0;
+        height: auto;
+        overflow: none;
+    }
+
+
     .layer {
         position: absolute;
         width: 100%;
@@ -59,6 +71,20 @@ header {
         padding: 0;
         z-index: 10;
         top: 0px;
+        list-style: none;
+
+        @include responsive("485px") {
+            position: relative;
+            background: transparent url(../img/35-years-background-vector-2.svg) repeat top right;
+            background-size: cover;
+            margin: 0 10px;
+            width: auto;
+
+            img {
+                width: auto;
+                height: 100%;
+            }
+        }
     }
 
     #layer1 {
@@ -66,6 +92,16 @@ header {
         background-size: 450px 700px;
         height: 296px;
         z-index: 1;
+
+        @include responsive("485px") {
+            height: 100%;
+            display: inline-block;
+        }
+
+
+        @include responsive("380px") {
+            display: none;
+        }
     }
 }
 
@@ -78,6 +114,13 @@ header {
 
     @include responsive("885px") {
         min-width: 465px;
+    }
+
+
+    @include responsive("485px") {
+        min-width: 100%;
+        padding: 0 10px;
+        font-size: 3.5rem;
     }
 }
 
@@ -722,6 +765,12 @@ section {
     padding: 0;
     line-height: 0;
     font-size: 0;
+
+    @include responsive("768px") {
+        max-height: 600px;
+        overflow: hidden;
+    }
+
 
     #confetti {
         position: relative;
